Scrollbar clipping fix

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,10 +13,14 @@
 /* Targtes on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
   width: 12px;
+  
 }
 
 *::-webkit-scrollbar-track {
   background: rgb(255, 255, 255);
+  border-radius: 25px;
+  margin-top: 3px;
+  margin-bottom: 3px;
 }
 
 *::-webkit-scrollbar-thumb {
